# pyPoseidon

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  Analysis of Schism Results.ipynb  GLOBAL GRID.ipynb  Grib2Schism.ipynb  HOW_TO_RELEASE.md  HTML Tricks.ipynb  MANIFEST.in  Makefile  README.md  Setup a model & run it.ipynb  Tide setup.ipynb  Vis.ipynb  Visualizations.ipynb  azure-pipelines.yml  env.yml  environment.yml  example1-Copy.ipynb  example1.ipynb  example2-Copy1.ipynb  example2.ipynb  example3.ipynb  example4.ipynb  example5.ipynb  mkdocs.yml  mpi2.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: code_quality.yml  conda.yml  conda_and_nested_venv.yml  conda_only.yml  conda_pip.yml
Notebooks/: Analysis of Schism Results.ipynb  Data_Reference.ipynb  GLOBAL GRID.ipynb  Grib2Schism.ipynb  HNMS.ipynb  Hindcast.ipynb  Meteo example.ipynb  Params.ipynb  Post Processing SCHISM.ipynb  Pyresample.ipynb  Re-Forecasting.ipynb  Read Models.ipynb  Schism Output.ipynb  Tide setup.ipynb  Visualizations.ipynb  Workflow_Cases.ipynb  Workflow_ERAI_D3D.ipynb  Workflow_Oper.ipynb  Workflow_Oper_Schism.ipynb  parallel python.ipynb
Notebooks/DEM/: EMODNET.ipynb  parallel python.ipynb
Notebooks/GRID/: D3D Grid file.ipynb  Read SCHISM Grid.ipynb
Notebooks/INPUT_FILES/: D3D input files.ipynb  Params.ipynb
Notebooks/JIGSAW/: step1.py  step2.py
Notebooks/METEO/: Read_D3D_metro_files.ipynb  Reduced_gg.ipynb  Rotated_ll.ipynb
Notebooks/MODEL/: Read Models.ipynb
Notebooks/UTILS/: Cast Prototype.ipynb  Hindcast ERAI.ipynb  Hindcast.ipynb  Schism Output.ipynb  cast.py
Poseidon/dem/: dem.py
Poseidon/meteo/: meteo.py
Poseidon/misc/: default.mdf  run_flow2d3d.sh
Poseidon/model/: bnd.py  dep.py  grid.py  mdf.py  model.py
Poseidon/tide/: tide.py
Poseidon/utils/: __init__.py  cast.py  data.py  datafile.py  obs.py  vis.py
Tutorial/: BOUNDARY.ipynb  DEM.ipynb  FORECAST.ipynb  GLOBAL.ipynb  GRID.ipynb  GSS.ipynb  HINDCAST.ipynb  HOTSTART.ipynb  MESH.ipynb  METEO.ipynb  MODEL.ipynb  README.md  SKILL.ipynb  TELEMAC.ipynb  UTILS.ipynb  VALIDATION.ipynb
binder/: environment.yml  postBuild  start
ci/: version.py
ci/azure/: add-conda-to-path.yml  install.yml  unit-tests.yml
conda.recipe/: meta.yaml
dependencies/: binary.yml  binary_deps.yml  delft3d_mpich.yml  delft3d_openmpi.yml  dev.yml  docs.yml  main.yml  python.yml  python3.10.yml  python3.11.yml  python3.12.yml  python3.9.yml  python38.yml  python39.yml  python_deps.yml  schism59-openmpi.yml  schism_mpich.yml  schism_openmpi.yml  solvers-mpich.yml  solvers-openmpi.yml  solvers_mpich.yml  solvers_openmpi.yml  telemac.yml  telemac_mpich.yml  telemac_openmpi.yml  viz.yml
docs/: .buildinfo  00_index.md  10_installation.md  20_structure.md  30_usage.md  50_API.md  90_references.md  Makefile  api.md  boundary.md  conf.py  dem.md  development.md  docs.yml  environment.yml  examples.html  faq.html  genindex.html  index.html  index.md  installation.html  installation.md  mesh.md  meteo.md  model.md  objects.inv  rationale.html  requirements.txt  search.html  searchindex.js  structure.md  utils.md
environments/: base-p3.10.yml  base-p3.11.yml  base-p3.12.yml  base-p3.9.yml  base.yml  binary-p3.10.yml  binary-p3.11.yml  binary-p3.12.yml  binary-p3.9.yml  binary-telemac-mpich-p3.10.yml  binary-telemac-mpich-p3.11.yml  binary-telemac-mpich-p3.9.yml  binary-telemac-openmpi-p3.10.yml  binary-telemac-openmpi-p3.11.yml  binary-telemac-openmpi-p3.9.yml  binary-telemac-p3.10.yml  binary-telemac-p3.11.yml  binary-telemac-p3.12.yml  binary-telemac-p3.9.yml  binary_mpich.yml  binary_openmpi.yml  full-p3.10.yml  full-p3.11.yml  full-p3.12.yml  full-p3.9.yml  full.yml  viz-p3.10.yml  viz-p3.11.yml  viz-p3.12.yml  viz-p3.9.yml  viz.yml
examples/: GFS meteo forcing.ipynb  Hindcast.ipynb  Hindcast.py  METEO.ipynb  Meteo example ECMWF.ipynb  Meteo example ERAI.ipynb  Meteo example-HNMS.ipynb  Meteo example.ipynb  Post Analysis D3D.ipynb  Post Analysis SCHISM.ipynb  Read_Case_Folders.ipynb  Read_Model.ipynb  Workflow.ipynb  Workflow_D3D.ipynb  Workflow_ERAI_D3D.ipynb  Workflow_GFS_oper.ipynb  Workflow_Oper.py  Workflow_Oper_D3D.ipynb  Workflow_Oper_Schism.ipynb  Workflow_Schism.ipynb
locks/: base.yml  binary-p3.10.yml  binary-p3.11.yml  binary-p3.12.yml  binary-p3.9.yml  binary-telemac-mpich-p3.10.yml  binary-telemac-mpich-p3.11.yml  binary-telemac-openmpi-p3.10.yml  binary-telemac-openmpi-p3.11.yml  binary-telemac-openmpi-p3.9.yml  binary-telemac-p3.10.yml  binary-telemac-p3.11.yml  binary-telemac-p3.12.yml  binary-telemac-p3.9.yml  binary_mpich.yml  binary_openmpi.yml  delft3d_mpich.yml  delft3d_openmpi.yml  full.yml  requirements-ci-telemac.txt  requirements-ci.txt  requirements-full.txt  requirements-testing.txt  requirements-viz.txt  requirements.txt  schism_mpich.yml  schism_openmpi.yml  solvers_mpich.yml  solvers_openmpi.yml  telemac_mpich.yml  telemac_openmpi.yml  viz.yml
pyPoseidon/: __init__.py  bnd.py  d3d.py  dem.py  grid.py  jigsaw.py  meteo.py  model.py  schism.py  ugmsh.py
pyPoseidon/dem/: dem.py  (+1 more)
pypo/: __init__.py  meteo.py  schism.py
pyposeidon/: __init__.py  bnd.py  boundary.py  d3d.py  dem.py  dem_tools.py  grid.py  jigsaw.py  mesh.py  meteo.py  mgmsh.py  mjigsaw.py  model.py  paths.py  schism.py  telemac.py  tools.py  ugmsh.py
scripts/: create_schism_link.sh  generate_envs.sh  generate_locks.sh  merge_environment_yaml.py
tests/: __init__.py  __main__.py  conftest.py  meteo_combine_test.py  pytest.ini  test_boundary.py  test_combine_meteo.py  test_d3d.py  test_d3d_cast.py  test_dem.py  test_dem_fix.py  test_dem_io.py  test_dem_tile.py  test_execution_control.py  test_grid.py  test_grid_global.py  test_grid_rw.py  test_mesh.py  test_mesh_global.py  test_meteo.py  test_meteo_combine.py  test_meteo_grib.py  test_meteo_slice.py  test_model.py  test_schism.py  test_schism_cast.py  test_schism_grid.py  test_schism_mesh.py  test_schism_reforecast.py  test_schism_total.py  test_telemac.py  test_telemac_cast.py  test_tools.py  test_update.py  test_viz.py  tools_test.py
(+149 files in other folders)
