[tool.poetry]
name = "pyposeidon"
version = "0.5.2"
description = "Framework for Sea Level Hydrodynamic simulations"
authors = [
    "George Breyiannis <breyiannis@gmail.com>",
    "Panos Mavrogiorgos <pmav99@gmail.com>"
]
readme = "README.md"
homepage = "https://github.com/ec-jrc/pyposeidon"
keywords = [
    "Hydrodynamic",
    "Sea",
    "Simulation",
    "Visualization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    'License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)',
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    'Topic :: Scientific/Engineering :: Atmospheric Science',
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
branca = "^0.4"
Cartopy = "<0.20"
cfgrib = "^0.9"
colorlog = "^4.7"
dask = "^2021.2"
f90nml = "^1.2"
geopandas = "^0.10"
gmsh = "^4.8"
llvmlite = "^0.36"
matplotlib = { version = "^3.3", optional = false }
netCDF4 = "^1.5"
numpy = ">=1.20, <2.0"
pandas = "^1.3"
psutil = "^5.8"
pygeos = ">=0.10, <1.0"
pyresample = "^1.17"
rasterio = "^1.2"
requests = "^2.25"
scipy = "^1.6"
setuptools = "*"
Shapely = "1.7.1"
tqdm = "^4.58"
xarray = ">=0.19,<1.0"
Pydap = { url = "https://github.com/pydap/pydap/archive/3f6aa190c59e3bbc6c834377a61579b20275ff69.zip" }
# docs
mkdocs-material = { version = "^7.0", optional = true }
mkdocstrings = { version = "^0.15", optional = true }
mkdocs = { version = "^1.1", optional = true }
pymdown-extensions = { version = "^8.1", optional = true }
# Testing
pytest-cov = { version = "^2.11", optional = true }
pytest = { version = "^6.2", optional = true }
pytest-xdist = { version = "^2.2", optional = true }
# viz
datashader = { version = "^0.12", optional = true }
geoviews = { version = "^1.8", optional = true }
holoviews = { version = "^1.14", optional = true }
hvplot = { version = "^0.7.0", optional = true }
ipython = { version = "^7.20", optional = true }
itkwidgets = { version = "^0.32.1", optional = true }
moviepy = { version = "1.0.3", optional = true }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
bump2version = "^1.0"
conda-lock = "^0.13.1"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "pymodwn-extensions", "mkdocstrings"]
testing = ["pytest", "pytest-cov", "pytest-xdist"]
viz = ["ipython", "holoviews", "geoviews", "datashader", "hvplot", "moviepy", "itkwidgets"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --verbose --showlocals --tb=short --cov=pyposeidon --cov-report term-missing"
testpaths = [
    "tests",
]
filterwarnings = [
    'ignore:`np.*` is a deprecated alias for .* `np.*`.*:DeprecationWarning',
]
markers = [
    "schism: mark a test as a Schism based test. Needs --runschism to run",
    "delft: mark a test as a Delft3D based test. Needs --rundelft to run",
    "slow: mark a test as a slow one. Needs --runslow to run",
]

[tool.black]
line-length = 119
target-version = ['py38']
