[tool.poetry]
name = "pyposeidon"
version = "0.6.0"
description = "Framework for Sea Level Hydrodynamic simulations"
authors = [
    "George Breyiannis <breyiannis@gmail.com>",
    "Panos Mavrogiorgos <pmav99@gmail.com>"
]
readme = "README.md"
homepage = "https://github.com/ec-jrc/pyposeidon"
keywords = [
    "Hydrodynamic",
    "Sea",
    "Simulation",
    "Visualization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    'License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)',
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    'Topic :: Scientific/Engineering :: Atmospheric Science',
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
setuptools = "*"
Cartopy = { url = "https://github.com/SciTools/cartopy/archive/refs/tags/v0.19.0.post1.zip" }
cfgrib = "^0.9"
colorlog = "^6.6"
dask = "^2022.1"
f90nml = "^1.2"
geopandas = "^0.10"
gmsh = "^4.8"
llvmlite = "^0.36"
netCDF4 = "^1.5"
numpy = ">=1.20, <2.0"
pandas = "^1.3"
psutil = "^5.8"
pydap = {url = "https://github.com/pydap/pydap/archive/refs/tags/3.3.0.zip"}
pygeos = { url = "https://github.com/pygeos/pygeos/releases/download/0.12.0/pygeos-0.12.0.tar.gz" }
pyresample = "^1.17"
rasterio = "^1.2"
requests = "^2.25"
rioxarray = "^0.9"
scipy = "^1.6"
Shapely = { url = "https://github.com/shapely/shapely/archive/refs/tags/1.7.1.zip" }
tqdm = "^4.58"
xarray = ">=0.19,<1.0"
# docs
mkdocs-material = { version = "^8.0", optional = true }
mkdocstrings = { version = "^0.17", optional = true }
mkdocs = { version = "^1.2", optional = true }
pymdown-extensions = { version = "^9.1", optional = true }
# Testing
pytest-cov = { version = "^3.0", optional = true }
pytest = { version = "^6.2", optional = true }
pytest-xdist = { version = "^2.2", optional = true }
# viz
geoviews = { version = "^1.9", optional = true, extras = ['recommended'] }
holoviews = { version = "^1.14", optional = true }
hvplot = { version = "^0.7", optional = true }
ipykernel = { version = "^6.7", optional = true }
itkwidgets = { version = "^0.32", optional = true }
matplotlib = { version = "^3.3", optional = true }
mayavi = { version = "^4.7", optional = true }
numba = { version = "<0.54", optional = true }
spatialpandas = { version = "^0.4.3", optional = true }
GDAL = "3.2.1"

[tool.poetry.dev-dependencies]
black = "21.12b0"
bump2version = "^1.0"
conda-lock = "^0.13"
"ruamel.yaml" = "<1.0"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "pymodwn-extensions", "mkdocstrings"]
testing = ["pytest", "pytest-cov", "pytest-xdist"]
viz = [
    "geoviews",
    "holoviews",
    "hvplot",
    "ipykernel",
    "itkwidgets",
    "matplotlib",
    "mayavi",
    "numba",
    "spatialpandas",
]
all = [
    "mkdocs",
    "mkdocs-material",
    "pymodwn-extensions",
    "mkdocstrings",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "geoviews",
    "holoviews",
    "hvplot",
    "ipykernel",
    "itkwidgets",
    "matplotlib",
    "mayavi",
    "numba",
    "spatialpandas",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --verbose --showlocals --tb=short --cov=pyposeidon --cov-report term-missing"
testpaths = [
    "tests",
]
filterwarnings = [
    'ignore:`np.*` is a deprecated alias for .* `np.*`.*:DeprecationWarning',
    'ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning',
    "ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc':DeprecationWarning",
]
markers = [
    "schism: mark a test as a Schism based test. Needs --runschism to run",
    "delft: mark a test as a Delft3D based test. Needs --rundelft to run",
    "slow: mark a test as a slow one. Needs --runslow to run",
    "viz: mark a test as a viz one. Needs --runviz to run",
    "runlast: mark a test as one that should be run at the end of the test suite",
]

[tool.black]
line-length = 119
target-version = ['py38']
